--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!html>
+<!doctype html>
 <meta charset="utf-8">
 <head>
 <title>Synthetic conflict</title>
 </head>
 <body>
-<p><h1>Text goes here, conflict pending</h1>
-</p>
+<script src="synflicting.js"></script>
+
+<h1>Text goes here, conflict pending</h1>
+
 
 
 </body>
